--- a/sass/components/_checkout.scss
+++ b/sass/components/_checkout.scss
@@ -202,6 +202,10 @@ ol.commerce-checkout-progress {
       }
     }
 }
+/* Chosen select for address administrative area fix */
+.page-checkout-shipping .l-content {
+  overflow: initial;
+}
 
 /* Checkout Review Pane */
 .checkout_review {
